# glassbox

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: quickstart.py
glassbox/: __init__.py  logger.py
glassbox/config/: defaults.py
glassbox/core/: evaluator.py  model_search.py  search.py  tuner.py
glassbox/examples/: run_xgboost.py
glassbox/plugins/: __init__.py  base.py  knocknotifier.py  manager.py  resource_monitor.py
glassbox/schemas/: __init__.py  evaluator.py  trial.py
glassbox/tracking/: wandb_tracker.py
glassbox/ui/: dashboard.py
glassbox/utils/: gpu.py  lazy_imports.py
tests/: TEST_SUITE.MD  conftest.py  test_config.py  test_dashboard.py  test_evaluator.py  test_gpu.py  test_lazy_imports.py  test_logger.py  test_model_search.py  test_plugins.py  test_search.py  test_tuner.py  test_wandb_tracker.py
