[project]
name = "glassbox"
version = "0.1.0"
description = "Real-time observability for model training and hyperparameter tuning"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
    "scikit-learn",
    "numpy",
    "pandas",
    "tqdm",
    "pydantic"
]

[project.optional-dependencies]
gpu = ["xgboost", "lightgbm", "torch"]
wandb = ["wandb"]
ui = ["reflex"]
optuna = ["optuna"]
